--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 find_package( Boost REQUIRED  COMPONENTS thread)
 find_package(Boost REQUIRED COMPONENTS system)
 # find_package(PCL REQUIRED)
+find_package(pcl_conversions REQUIRED)
 find_package(ament_cmake REQUIRED)
 find_package(ament_index_cpp REQUIRED)
 find_package(rclcpp REQUIRED)
