--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ add_library(PandarGeneralSDK SHARED
     src/HesaiLidar_General_SDK/src/tcp_command_client.c
     src/HesaiLidar_General_SDK/src/util.c
 )
-add_dependencies(PandarGeneral hesai_lidar_generate_messages_cpp)
+#add_dependencies(PandarGeneral hesai_lidar_generate_messages_cpp)
 target_include_directories(PandarGeneralSDK PRIVATE
     src/HesaiLidar_General_SDK/
     src/HesaiLidar_General_SDK/include/
@@ -78,7 +78,7 @@ target_include_directories(PandarGeneralSDK PRIVATE
     ${PCL_INCLUDE_DIRS}
     # ${YAML_CPP_INCLUDE_DIRS}
 )
-add_dependencies(PandarGeneralSDK hesai_lidar_generate_messages_cpp)
+#add_dependencies(PandarGeneralSDK hesai_lidar_generate_messages_cpp)
 target_link_libraries(PandarGeneralSDK 
     PandarGeneral
     ${Boost_LIBRARIES}
