--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,4 +133,8 @@ install(TARGETS hesai_lidar_node
 install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME})
 
+ament_export_include_directories(include)
+ament_export_libraries(${library_name})
+ament_export_dependencies(${dependencies})
 ament_package()
+
