--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,10 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_action</depend>
   <depend>tf2_ros</depend>
+  <exec_depend>tf2</exec_depend>
+  <build_export_depend>tf2</build_export_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <build_export_depend>tf2_ros</build_export_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
   <export>
     <build_type>ament_cmake</build_type>
