--- a/package.xml
+++ b/package.xml
@@ -16,11 +16,8 @@
   <depend>ament_index_cpp</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_action</depend>
-  # <depend>tf2_ros</depend>
-  <exec_depend>tf2</exec_depend>
-  <build_export_depend>tf2</build_export_depend>
-  <exec_depend>tf2_ros</exec_depend>
-  <build_export_depend>tf2_ros</build_export_depend>
+  <depend>tf2_ros</depend>
+  
   <member_of_group>rosidl_interface_packages</member_of_group>
   <export>
     <build_type>ament_cmake</build_type>
